fixed z-index of modal and navbar

--- a/frontend/src/store/components/Navigation/Navigation.css
+++ b/frontend/src/store/components/Navigation/Navigation.css
@@ -5,7 +5,7 @@
     top: 0;
     background-color: white;
     width: 100%;
-    /* z-index: 1; */
+    z-index: 1;
 }
 
 .navigation-bar {
